# ChangeLog for app-admin/eselect-ctags
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Nov 2009; Ulrich Mueller <ulm@gentoo.org> eselect-ctags-9999.ebuild:
  Update eselect dependency.

  25 May 2008; Ulrich Mueller <ulm@gentoo.org>
  -eselect-ctags-1.5_pre1.ebuild:
  Remove old.

*eselect-ctags-1.5_pre1 (23 May 2008)

  23 May 2008; Ulrich Mueller <ulm@gentoo.org>
  +eselect-ctags-1.5_pre1.ebuild, eselect-ctags-9999.ebuild:
  Prerelease.

*eselect-ctags-9999 (30 Apr 2008)

  30 Apr 2008; Ulrich Mueller <ulm@gentoo.org> +metadata.xml,
  +eselect-ctags-9999.ebuild:
  Live SVN ebuild.
