@@ -1,19 +1,23 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-inherit subversion
+EAPI=4
 
 MY_PN="eselect-emacs"
+EGIT_REPO_URI="git://git.overlays.gentoo.org/proj/emacs-tools.git"
+EGIT_BRANCH="${MY_PN}"
+
+inherit git-2
+
 DESCRIPTION="Manages ctags implementations"
 HOMEPAGE="http://www.gentoo.org/proj/en/lisp/emacs/"
 #SRC_URI="mirror://gentoo/${MY_P}.tar.bz2"
-ESVN_REPO_URI="svn://anonsvn.gentoo.org/emacs/${MY_PN}"
-ESVN_PROJECT="${MY_PN}"
+SRC_URI=""
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~sparc-fbsd ~x86 ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~hppa-hpux ~ia64-hpux ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
 IUSE=""
 
 DEPEND=""
@@ -26,6 +30,6 @@ src_compile() { :; }
 
 src_install() {
 	insinto /usr/share/eselect/modules
-	doins ctags.eselect || die "doins failed"
-	doman ctags.eselect.5 || die "doman failed"
+	doins ctags.eselect || die
+	doman ctags.eselect.5 || die
 }
