@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/eselect-ctags
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  09 Jun 2012; Ulrich Müller <ulm@gentoo.org> eselect-ctags-9999.ebuild:
+  Change live ebuild to use Git. Update to EAPI 4.
 
   07 Nov 2009; Ulrich Mueller <ulm@gentoo.org> eselect-ctags-9999.ebuild:
   Update eselect dependency.
